# article-to-speech

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  pyrightconfig.json
docker/: entrypoint.sh
src/article_to_speech/: __init__.py  __main__.py  article_helpers.py  cli.py  service.py  telegram_support.py
src/article_to_speech/article/: __init__.py  archive_parser.py  archive_replay.py  cleaner.py  extractor.py  extractor_support.py  metadata.py  parser_config.py  resolver.py  source_detection.py
src/article_to_speech/browser/: capture.py  chatgpt.py  fetcher.py  launch.py  support.py  ui.py  ui_audio.py
src/article_to_speech/browser/ui_audio/: __init__.py
src/article_to_speech/core/: __init__.py  browser_runtime.py  config.py  exceptions.py  logging_config.py  models.py  urls.py
src/article_to_speech/infra/: __init__.py  archive_proxy.py  audio.py  browser_audio_files.py  browser_audio_runtime.py  persistence.py  telegram.py
src/article_to_speech/tts/: __init__.py  google.py
tests/: test_browser_capture.py  test_browser_errors.py  test_browser_launch.py  test_browser_profile.py  test_cleaner.py  test_config.py  test_extractor.py  test_fetcher.py  test_google_tts.py  test_persistence.py  test_resolver.py  test_service.py  test_telegram_runner.py  test_urls.py
tests/fixtures/archive/: faz_iYzQJ.html  nyt_YTmQk.html  spektrum_PqXGV.html  spiegel_CToFU.html  spiegel_tLxbG.html  sz_uXKno.html  zeit_FEzwe.html
